Fujitsu tablet PC support misc.

--- a/MagickExtras/fujitsu-tablet-20120404-gerlach/dkms.conf
+++ b/MagickExtras/fujitsu-tablet-20120404-gerlach/dkms.conf
@@ -1,7 +1,7 @@
 PACKAGE_NAME="fujitsu-tablet"
 PACKAGE_VERSION="20120404-gerlach"
 
-CLEAN="rm -f *.o *.ko *.mod.c .*.cmd Module.symvers modules.order & rm -f -r .tmp_versions"
+CLEAN="rm -f *.o *.ko *.mod.c .*.cmd Module.symvers modules.order && rm -rf .tmp_versions"
 
 BUILT_MODULE_NAME[0]="fujitsu-tablet"
 
